--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.25.4
   firebase_messaging: ^14.7.16
+  numberpicker: ^2.1.2
 
 dev_dependencies:
   flutter_test:
