--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,19 @@ dependencies:
   firebase_core: ^2.25.4
   firebase_messaging: ^14.7.16
   numberpicker: ^2.1.2
+  drift: ^2.15.0
+  sqlite3_flutter_libs: ^0.5.21
+  path_provider: ^2.1.3
+  path: ^1.8.3
+  sqlite3: ^2.4.0
 
 dev_dependencies:
+  drift_dev: ^2.15.0
+  build_runner: ^2.4.9
   flutter_test:
     sdk: flutter
+  
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -64,6 +73,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+  - assets/aqua.db
   - assets/images/
   #   - images/a_dot_ham.jpeg
 
