--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   path_provider: ^2.1.3
   path: ^1.8.3
   sqlite3: ^2.4.0
+  flutter_colorpicker: ^1.1.0
+  provider: ^6.1.2
 
 dev_dependencies:
   drift_dev: ^2.15.0
