--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,8 @@ dependencies:
   path: ^1.8.3
   sqlite3: ^2.4.0
   flutter_colorpicker: ^1.1.0
-  provider: ^6.1.2
+  shared_preferences: ^2.2.3
+  cron: ^0.6.0
 
 dev_dependencies:
   drift_dev: ^2.15.0
