--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_colorpicker: ^1.1.0
   shared_preferences: ^2.2.3
   cron: ^0.6.0
+  searchable_listview: ^2.14.0
 
 dev_dependencies:
   drift_dev: ^2.15.0
