primitive onboarding screens

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   cron: ^0.6.0
   searchable_listview: ^2.14.0
   random_color: ^1.0.6-nullsafety
+  animated_text_kit: ^4.2.2
+  smooth_page_indicator: ^1.1.0
+  confetti: ^0.7.0
+  coast: ^2.0.2
 
 dev_dependencies:
   drift_dev: ^2.15.0
@@ -80,7 +84,6 @@ flutter:
   assets:
   - assets/aqua.db
   - assets/images/
-  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
