--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   confetti: ^0.7.0
   coast: ^2.0.2
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   drift_dev: ^2.15.0
