--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   confetti: ^0.7.0
   coast: ^2.0.2
   permission_handler: ^11.3.1
+  cloud_firestore: ^4.17.5
 
 dev_dependencies:
   drift_dev: ^2.15.0
