--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,4 +67,6 @@ flutter {
 
 dependencies {
     implementation(platform("com.google.firebase:firebase-bom:33.1.0"))
+    implementation("com.google.firebase:firebase-storage")
+
 }
