--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   coast: ^2.0.2
   permission_handler: ^11.3.1
   cloud_firestore: ^4.17.5
+  firebase_storage: ^11.7.7
 
 dev_dependencies:
   drift_dev: ^2.15.0
