--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,10 +56,13 @@ dependencies:
   cloud_firestore: ^4.17.5
   firebase_storage: ^11.7.7
   email_validator: ^2.1.17
+  flow_builder: ^0.1.0
+  freezed_annotation: ^2.4.1
 
 dev_dependencies:
   drift_dev: ^2.15.0
   build_runner: ^2.4.9
+  freezed: ^2.1.0
   flutter_test:
     sdk: flutter
   
