--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   calendar_date_picker2: ^1.0.6
   progressive_time_picker: ^1.0.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   drift_dev: ^2.15.0
