--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,10 @@ dependencies:
   progressive_time_picker: ^1.0.1
   image_picker: ^1.1.2
   animated_toggle_switch: ^0.8.2
+  country_state_city_pro: ^0.0.6
+  geocoding: ^3.0.0
+  geocode: ^1.0.3
+  location: ^6.0.2
 
 dev_dependencies:
   drift_dev: ^2.15.0
