--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   geocoding: ^3.0.0
   geocode: ^1.0.3
   location: ^6.0.2
+  fab_circular_menu_plus: ^0.0.2
 
 dev_dependencies:
   drift_dev: ^2.15.0
