--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   geocode: ^1.0.3
   location: ^6.0.2
   fab_circular_menu_plus: ^0.0.2
+  weather: ^3.1.1
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   drift_dev: ^2.15.0
