--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   awesome_notifications: ^0.9.3+1
   awesome_notifications_core: ^0.9.3
+  fluttertoast: ^8.2.6
 
 dev_dependencies:
   drift_dev: ^2.15.0
