--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   fluttertoast: ^8.2.6
   fl_chart: ^0.68.0
   collection: ^1.18.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   drift_dev: ^2.15.0
