design settings page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   fl_chart: ^0.68.0
   collection: ^1.18.0
   shimmer: ^3.0.0
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   drift_dev: ^2.15.0
