--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   collection: ^1.18.0
   shimmer: ^3.0.0
   url_launcher: ^6.3.0
+  share_plus: ^9.0.0
 
 dev_dependencies:
   drift_dev: ^2.15.0
