--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: aqua
-description: "A new Flutter project."
+description: A water-intake tracking and reminder app
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -40,7 +40,6 @@ dependencies:
   sqlite3: ^2.4.0
   flutter_colorpicker: ^1.1.0
   shared_preferences: ^2.2.3
-  cron: ^0.6.0
   searchable_listview: ^2.14.0
   animated_text_kit: ^4.2.2
   confetti: ^0.7.0
@@ -56,7 +55,6 @@ dependencies:
   image_picker: ^1.1.2
   animated_toggle_switch: ^0.8.2
   country_state_city_pro: ^0.0.6
-  geocoding: ^3.0.0
   geocode: ^1.0.3
   location: ^6.0.2
   fab_circular_menu_plus: ^0.0.2
@@ -149,12 +147,3 @@ flutter:
   - family: icomoon
     fonts:
     - asset: assets/fonts/icomoon.ttf
-
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
