--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 }
 
 plugins {
-    id("com.google.gms.google-services") version "4.4.2" apply false
+    id 'com.google.gms.google-services' version '4.4.2' apply false
 }
 
 allprojects {
