--- a/macos/Runner/GoogleService-Info.plist
+++ b/macos/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.aqua.RunnerTests</string>
+	<string>com.anshu79.aqua.RunnerTests</string>
 	<key>PROJECT_ID</key>
 	<string>aqua-101</string>
 	<key>STORAGE_BUCKET</key>
