--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   shimmer: ^3.0.0
   url_launcher: ^6.3.0
   share_plus: ^9.0.0
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   drift_dev: ^2.15.0
